; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/etnaviv/extr_etnaviv_gem.c_etnaviv_gem_cpu_prep.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/etnaviv/extr_etnaviv_gem.c_etnaviv_gem_cpu_prep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_gem_object = type { i32, %struct.drm_device* }
%struct.drm_device = type { i32 }
%struct.timespec = type { i32 }
%struct.etnaviv_gem_object = type { i32, i32, %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32, i32 }

@ETNA_PREP_WRITE = common dso_local global i32 0, align 4
@ETNA_PREP_NOSYNC = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4
@ETIMEDOUT = common dso_local global i32 0, align 4
@ETNA_BO_CACHED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @etnaviv_gem_cpu_prep(%struct.drm_gem_object* %0, i32 %1, %struct.timespec* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.drm_gem_object*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.timespec*, align 8
  %8 = alloca %struct.etnaviv_gem_object*, align 8
  %9 = alloca %struct.drm_device*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  store %struct.drm_gem_object* %0, %struct.drm_gem_object** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.timespec* %2, %struct.timespec** %7, align 8
  %14 = load %struct.drm_gem_object*, %struct.drm_gem_object** %5, align 8
  %15 = call %struct.etnaviv_gem_object* @to_etnaviv_bo(%struct.drm_gem_object* %14)
  store %struct.etnaviv_gem_object* %15, %struct.etnaviv_gem_object** %8, align 8
  %16 = load %struct.drm_gem_object*, %struct.drm_gem_object** %5, align 8
  %17 = getelementptr inbounds %struct.drm_gem_object, %struct.drm_gem_object* %16, i32 0, i32 1
  %18 = load %struct.drm_device*, %struct.drm_device** %17, align 8
  store %struct.drm_device* %18, %struct.drm_device** %9, align 8
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* @ETNA_PREP_WRITE, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  %23 = xor i1 %22, true
  %24 = xor i1 %23, true
  %25 = zext i1 %24 to i32
  store i32 %25, i32* %10, align 4
  %26 = load %struct.etnaviv_gem_object*, %struct.etnaviv_gem_object** %8, align 8
  %27 = getelementptr inbounds %struct.etnaviv_gem_object, %struct.etnaviv_gem_object* %26, i32 0, i32 2
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = icmp ne %struct.TYPE_2__* %28, null
  br i1 %29, label %46, label %30

30:                                               ; preds = %3
  %31 = load %struct.etnaviv_gem_object*, %struct.etnaviv_gem_object** %8, align 8
  %32 = getelementptr inbounds %struct.etnaviv_gem_object, %struct.etnaviv_gem_object* %31, i32 0, i32 3
  %33 = call i32 @mutex_lock(i32* %32)
  %34 = load %struct.etnaviv_gem_object*, %struct.etnaviv_gem_object** %8, align 8
  %35 = call i8* @etnaviv_gem_get_pages(%struct.etnaviv_gem_object* %34)
  store i8* %35, i8** %12, align 8
  %36 = load %struct.etnaviv_gem_object*, %struct.etnaviv_gem_object** %8, align 8
  %37 = getelementptr inbounds %struct.etnaviv_gem_object, %struct.etnaviv_gem_object* %36, i32 0, i32 3
  %38 = call i32 @mutex_unlock(i32* %37)
  %39 = load i8*, i8** %12, align 8
  %40 = call i64 @IS_ERR(i8* %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %45

42:                                               ; preds = %30
  %43 = load i8*, i8** %12, align 8
  %44 = call i32 @PTR_ERR(i8* %43)
  store i32 %44, i32* %4, align 4
  br label %112

45:                                               ; preds = %30
  br label %46

46:                                               ; preds = %45, %3
  %47 = load i32, i32* %6, align 4
  %48 = load i32, i32* @ETNA_PREP_NOSYNC, align 4
  %49 = and i32 %47, %48
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %51, label %62

51:                                               ; preds = %46
  %52 = load %struct.drm_gem_object*, %struct.drm_gem_object** %5, align 8
  %53 = getelementptr inbounds %struct.drm_gem_object, %struct.drm_gem_object* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 8
  %55 = load i32, i32* %10, align 4
  %56 = call i32 @dma_resv_test_signaled_rcu(i32 %54, i32 %55)
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %61, label %58

58:                                               ; preds = %51
  %59 = load i32, i32* @EBUSY, align 4
  %60 = sub nsw i32 0, %59
  store i32 %60, i32* %4, align 4
  br label %112

61:                                               ; preds = %51
  br label %84

62:                                               ; preds = %46
  %63 = load %struct.timespec*, %struct.timespec** %7, align 8
  %64 = call i64 @etnaviv_timeout_to_jiffies(%struct.timespec* %63)
  store i64 %64, i64* %13, align 8
  %65 = load %struct.drm_gem_object*, %struct.drm_gem_object** %5, align 8
  %66 = getelementptr inbounds %struct.drm_gem_object, %struct.drm_gem_object* %65, i32 0, i32 0
  %67 = load i32, i32* %66, align 8
  %68 = load i32, i32* %10, align 4
  %69 = load i64, i64* %13, align 8
  %70 = call i32 @dma_resv_wait_timeout_rcu(i32 %67, i32 %68, i32 1, i64 %69)
  store i32 %70, i32* %11, align 4
  %71 = load i32, i32* %11, align 4
  %72 = icmp sle i32 %71, 0
  br i1 %72, label %73, label %83

73:                                               ; preds = %62
  %74 = load i32, i32* %11, align 4
  %75 = icmp eq i32 %74, 0
  br i1 %75, label %76, label %79

76:                                               ; preds = %73
  %77 = load i32, i32* @ETIMEDOUT, align 4
  %78 = sub nsw i32 0, %77
  br label %81

79:                                               ; preds = %73
  %80 = load i32, i32* %11, align 4
  br label %81

81:                                               ; preds = %79, %76
  %82 = phi i32 [ %78, %76 ], [ %80, %79 ]
  store i32 %82, i32* %4, align 4
  br label %112

83:                                               ; preds = %62
  br label %84

84:                                               ; preds = %83, %61
  %85 = load %struct.etnaviv_gem_object*, %struct.etnaviv_gem_object** %8, align 8
  %86 = getelementptr inbounds %struct.etnaviv_gem_object, %struct.etnaviv_gem_object* %85, i32 0, i32 0
  %87 = load i32, i32* %86, align 8
  %88 = load i32, i32* @ETNA_BO_CACHED, align 4
  %89 = and i32 %87, %88
  %90 = icmp ne i32 %89, 0
  br i1 %90, label %91, label %111

91:                                               ; preds = %84
  %92 = load %struct.drm_device*, %struct.drm_device** %9, align 8
  %93 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %92, i32 0, i32 0
  %94 = load i32, i32* %93, align 4
  %95 = load %struct.etnaviv_gem_object*, %struct.etnaviv_gem_object** %8, align 8
  %96 = getelementptr inbounds %struct.etnaviv_gem_object, %struct.etnaviv_gem_object* %95, i32 0, i32 2
  %97 = load %struct.TYPE_2__*, %struct.TYPE_2__** %96, align 8
  %98 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %97, i32 0, i32 1
  %99 = load i32, i32* %98, align 4
  %100 = load %struct.etnaviv_gem_object*, %struct.etnaviv_gem_object** %8, align 8
  %101 = getelementptr inbounds %struct.etnaviv_gem_object, %struct.etnaviv_gem_object* %100, i32 0, i32 2
  %102 = load %struct.TYPE_2__*, %struct.TYPE_2__** %101, align 8
  %103 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %102, i32 0, i32 0
  %104 = load i32, i32* %103, align 4
  %105 = load i32, i32* %6, align 4
  %106 = call i32 @etnaviv_op_to_dma_dir(i32 %105)
  %107 = call i32 @dma_sync_sg_for_cpu(i32 %94, i32 %99, i32 %104, i32 %106)
  %108 = load i32, i32* %6, align 4
  %109 = load %struct.etnaviv_gem_object*, %struct.etnaviv_gem_object** %8, align 8
  %110 = getelementptr inbounds %struct.etnaviv_gem_object, %struct.etnaviv_gem_object* %109, i32 0, i32 1
  store i32 %108, i32* %110, align 4
  br label %111

111:                                              ; preds = %91, %84
  store i32 0, i32* %4, align 4
  br label %112

112:                                              ; preds = %111, %81, %58, %42
  %113 = load i32, i32* %4, align 4
  ret i32 %113
}

declare dso_local %struct.etnaviv_gem_object* @to_etnaviv_bo(%struct.drm_gem_object*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i8* @etnaviv_gem_get_pages(%struct.etnaviv_gem_object*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i64 @IS_ERR(i8*) #1

declare dso_local i32 @PTR_ERR(i8*) #1

declare dso_local i32 @dma_resv_test_signaled_rcu(i32, i32) #1

declare dso_local i64 @etnaviv_timeout_to_jiffies(%struct.timespec*) #1

declare dso_local i32 @dma_resv_wait_timeout_rcu(i32, i32, i32, i64) #1

declare dso_local i32 @dma_sync_sg_for_cpu(i32, i32, i32, i32) #1

declare dso_local i32 @etnaviv_op_to_dma_dir(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
